--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .bgimage {
     height: 100vh;
     max-height: 900px;
-    background: url("images/image1.jpg");
+    background: url("images/bg.webp");
     background-size: cover;
     position: relative;
 }
