--- a/style.css
+++ b/style.css
@@ -43,6 +43,18 @@
     font-size: 2rem;
 }
 
+@media (max-width: 640px) {
+
+    /* text css above hero image*/
+.hero_title {
+    font-size: 3rem;
+}
+.hero_desc {
+    font-size: 1.5rem;
+}
+
+}
+
 .contrast {
     background-color: rgba(0, 0, 0, 0.2);
 
