--- a/style.css
+++ b/style.css
@@ -1,494 +1,1 @@
-@charset "UTF-8";
-:root{
-    --bs-font-sans-serif:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    --bs-body-font-family:var(--bs-font-sans-serif);
-    --bs-body-font-size:1rem;
-    --bs-body-font-weight:400;
-    --bs-body-line-height:1.5;
-    --bs-body-color:#212529;
-    --bs-body-bg:#fff
-}
-
-.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{
-    margin-top:0;
-    margin-bottom:.5rem;
-    font-weight:500;
-    line-height:1.2
-}
-.h1,h1{
-    font-size:calc(1.375rem + 1.5vw)
-}
-@media (min-width:1200px){
-    .h1,h1{
-        font-size:2.5rem
-    }
-}
-
-.h2,h2{
-    font-size:calc(1.325rem + .9vw)
-}
-@media (min-width:1200px){
-    .h2,h2{
-        font-size:2rem
-    }
-}
-
-.h3,h3{
-    font-size:calc(1.3rem + .6vw)
-}
-@media (min-width:1200px){
-    .h3,h3{
-        font-size:1.75rem
-    }
-}
-
-*,::after,::before{
-    box-sizing:border-box
-}
-p{
-    margin-top:0;
-    margin-bottom:1rem
-}
-
-@media (prefers-reduced-motion:no-preference){
-    :root{
-        scroll-behavior:smooth
-    }
-}
-
-body{
-    margin:0;
-    font-family:var(--bs-body-font-family);
-    font-size:var(--bs-body-font-size);
-    font-weight:var(--bs-body-font-weight);
-    line-height:var(--bs-body-line-height);
-    color:var(--bs-body-color);
-    text-align:var(--bs-body-text-align);
-    background-color:var(--bs-body-bg);
-    -webkit-text-size-adjust:100%;
-    -webkit-tap-highlight-color:transparent
-}
-
-ol,ul{
-    padding-left:2rem
-}
-
-dl,ol,ul{
-    margin-top:0;
-    margin-bottom:1rem
-}
-
-img,svg{
-    vertical-align:middle
-}
-
-button{
-    border-radius:0
-}
-
-button,input,optgroup,select,textarea{
-    margin:0;
-    font-family:inherit;
-    font-size:inherit;
-    line-height:inherit
-}
-button,select{
-    text-transform:none
-}
-
-[type=button],[type=reset],[type=submit],button{
-    -webkit-appearance:button
-}
-
-[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled){
-    cursor:pointer
-}
-
-.container,.container-fluid,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{
-    width:100%;
-    padding-right:var(--bs-gutter-x,.75rem);
-    padding-left:var(--bs-gutter-x,.75rem);
-    margin-right:auto;
-    margin-left:auto
-}
-
-@media (min-width:992px){
-    .container,.container-lg,.container-md,.container-sm{
-        max-width:960px
-    }
-}
-
-@media (min-width:1200px){
-    .container,.container-lg,.container-md,.container-sm,.container-xl{
-        max-width:1140px
-    }
-}
-.row{
-    --bs-gutter-x:1.5rem;
-    --bs-gutter-y:0;
-    display:flex;
-    flex-wrap:wrap;
-    margin-top:calc(-1 * var(--bs-gutter-y));
-    margin-right:calc(-.5 * var(--bs-gutter-x));
-    margin-left:calc(-.5 * var(--bs-gutter-x))
-}
-.row>*{
-    flex-shrink:0;
-    width:100%;
-    max-width:100%;
-    padding-right:calc(var(--bs-gutter-x) * .5);
-    padding-left:calc(var(--bs-gutter-x) * .5);
-    margin-top:var(--bs-gutter-y)
-}
-
-@media (min-width:768px){
-    .col-md-6{
-        flex:0 0 auto;
-        width:50%
-    }
-}
-
-@media (min-width:992px){
-
-    .col-lg-4{
-        flex:0 0 auto;
-        width:33.33333333%
-    }
-
-    .col-lg-8{
-        flex:0 0 auto;
-        width:66.66666667%
-    }
-}
-
-@media (min-width:992px){
-    .col-lg-12{
-        flex:0 0 auto;
-        width:100%
-    }
-}
-
-.btn{
-    display:inline-block;
-    font-weight:400;
-    line-height:1.5;
-    color:#212529;
-    text-align:center;
-    text-decoration:none;
-    vertical-align:middle;
-    cursor:pointer;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    user-select:none;
-    background-color:transparent;
-    border:1px solid transparent;
-    padding:.375rem .75rem;
-    font-size:1rem;
-    border-radius:.25rem;
-    transition:color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
-}
-@media (prefers-reduced-motion:reduce){
-    .btn{
-        transition:none
-    }
-}
-
-.btn-success{
-    color:#fff;
-    background-color:#198754;
-    border-color:#198754
-}
-
-
-.collapse:not(.show){
-    display:none
-}
-
-.nav-link{
-    display:block;
-    padding:.5rem 1rem;
-    color:#0d6efd;
-    text-decoration:none;
-    transition:color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out
-}
-@media (prefers-reduced-motion:reduce){
-    .nav-link{
-        transition:none
-    }
-}
-
-.navbar{
-    position:relative;
-    display:flex;
-    flex-wrap:wrap;
-    align-items:center;
-    justify-content:space-between;
-    padding-top:.5rem;
-    padding-bottom:.5rem
-}
-
-.navbar>.container,.navbar>.container-fluid,.navbar>.container-lg,.navbar>.container-md,.navbar>.container-sm,.navbar>.container-xl,.navbar>.container-xxl{
-    display:flex;
-    flex-wrap:inherit;
-    align-items:center;
-    justify-content:space-between
-}
-
-.navbar-brand{
-    padding-top:.3125rem;
-    padding-bottom:.3125rem;
-    margin-right:1rem;
-    font-size:1.25rem;
-    text-decoration:none;
-    white-space:nowrap
-}
-
-.navbar-nav{
-    display:flex;
-    flex-direction:column;
-    padding-left:0;
-    margin-bottom:0;
-    list-style:none
-}
-
-.navbar-collapse{
-    flex-basis:100%;
-    flex-grow:1;
-    align-items:center
-}
-
-.navbar-toggler{
-    padding:.25rem .75rem;
-    font-size:1.25rem;
-    line-height:1;
-    background-color:transparent;
-    border:1px solid transparent;
-    border-radius:.25rem;
-    transition:box-shadow .15s ease-in-out
-}
-
-.navbar-toggler-icon{
-    display:inline-block;
-    width:1.5em;
-    height:1.5em;
-    vertical-align:middle;
-    background-repeat:no-repeat;
-    background-position:center;
-    background-size:100%
-}
-
-@media (min-width:992px){
-    .navbar-expand-lg{
-        flex-wrap:nowrap;
-        justify-content:flex-start
-    }
-
-    .navbar-expand-lg .navbar-nav{
-        flex-direction:row
-    }
-
-    .navbar-expand-lg .navbar-nav .nav-link{
-        padding-right:.5rem;
-        padding-left:.5rem
-    }
-
-    .navbar-expand-lg .navbar-collapse{
-        display:flex!important;
-        flex-basis:auto
-    }
-
-    .navbar-expand-lg .navbar-toggler{
-        display:none
-    }
-}
-
-
-.navbar-dark .navbar-brand{
-    color:#fff
-}
-
-.navbar-dark .navbar-toggler{
-    color:rgba(255,255,255,.55);
-    border-color:rgba(255,255,255,.1)
-}
-
-.navbar-dark .navbar-toggler-icon{
-    background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
-}
-
-.card{
-    position:relative;
-    display:flex;
-    flex-direction:column;
-    min-width:0;
-    word-wrap:break-word;
-    background-color:#fff;
-    background-clip:border-box;
-    border:1px solid rgba(0,0,0,.125);
-    border-radius:.25rem
-}
-.card-body{
-    flex:1 1 auto;
-    padding:1rem 1rem
-}
-.card-title{
-    margin-bottom:.5rem
-}
-.card-text:last-child{
-    margin-bottom:0
-}
-.card-img,.card-img-top{
-    border-top-left-radius:calc(.25rem - 1px);
-    border-top-right-radius:calc(.25rem - 1px)
-}
-.fixed-top{
-    position:fixed;
-    top:0;
-    right:0;
-    left:0;
-    z-index:1030
-}
-.mt-3{
-    margin-top:1rem!important
-}
-.mt-4{
-    margin-top:1.5rem!important
-}
-.ms-auto{
-    margin-left:auto!important
-}
-.pt-4{
-    padding-top:1.5rem!important
-}
-.text-center{
-    text-align:center!important
-}
-
-/******* GENERAL *******/
-/* spacing on all sections */
-#about,
-#skills,
-#portfolio,
-#contact {
-    margin-top: 4rem;
-    padding-top: 4rem;
-}
-#about h2,
-#skills h2,
-#portfolio h2,
-#contact h2 {
-    margin-bottom: 3rem;
-}
-#contact {
-    padding-bottom: 4rem;
-}
-
-/* display background dark color on navbar scroll */
-.navbarScroll.navbarDark {
-    background-color: #5b5b5b;
-}
-
-.nav-link{
-    color: #ffffff !important;
-}
-
-
-/* hero background image */
-.bgimage {
-    height: 100vh;
-    max-height: 900px;
-    background: url("images/bg.webp");
-    background-size: cover;
-    position: relative;
-}
-/* text css above hero image*/
-.hero_title {
-    font-size: 4.5rem;
-}
-.hero_desc {
-    font-size: 2rem;
-}
-
-@media (max-width: 640px) {
-
-    /* text css above hero image*/
-.hero_title {
-    font-size: 3rem;
-}
-.hero_desc {
-    font-size: 1.5rem;
-}
-
-}
-
-.contrast {
-    background-color: rgba(0, 0, 0, 0.2);
-
-}
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-/* about */
-.imageAboutPage {
-    width: 100%;
-}
-.imageAboutPage {
-    border-radius: 50%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-/* skills */
-.skillsText.card {
-    height: 350px;
-    cursor: pointer;
-}
-.skillsText img {
-    width: 100%;
-    height: 150px;
-    object-fit: contain;
-}
-#skills p {
-    text-align: center;
-}
-.skillsIcon {
-    font-size: 36px;
-    text-align: center;
-    width: 100%;
-}
-.card-title {
-    text-align: center;
-}
-.card:hover .skillsIcon {
-    color: #008000;
-}
-.skillsText:hover {
-    border: 1px solid #008000;
-}
-
-/* portfolio */
-#portfolio p {
-    text-align: center;
-}
-
-/* contact */
-.contactColumn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.contactColumn i {
-    color: #198754;
-}
-
-/* footer */
-
-a {
-    text-decoration: none;   
-    color: inherit;              
-}
+@charset "UTF-8";:root{--bs-font-sans-serif:system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";--bs-body-font-family:var(--bs-font-sans-serif);--bs-body-font-size:1rem;--bs-body-font-weight:400;--bs-body-line-height:1.5;--bs-body-color:#212529;--bs-body-bg:#fff }.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:.5rem;font-weight:500;line-height:1.2 }.h1,h1{font-size:calc(1.375rem + 1.5vw) }@media (min-width:1200px){.h1,h1{font-size:2.5rem }}.h2,h2{font-size:calc(1.325rem + .9vw) }@media (min-width:1200px){.h2,h2{font-size:2rem }}.h3,h3{font-size:calc(1.3rem + .6vw) }@media (min-width:1200px){.h3,h3{font-size:1.75rem }}*,::after,::before{box-sizing:border-box }p{margin-top:0;margin-bottom:1rem }@media (prefers-reduced-motion:no-preference){:root{scroll-behavior:smooth }}body{margin:0;font-family:var(--bs-body-font-family);font-size:var(--bs-body-font-size);font-weight:var(--bs-body-font-weight);line-height:var(--bs-body-line-height);color:var(--bs-body-color);text-align:var(--bs-body-text-align);background-color:var(--bs-body-bg);-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent }ol,ul{padding-left:2rem }dl,ol,ul{margin-top:0;margin-bottom:1rem }img,svg{vertical-align:middle }button{border-radius:0 }button,input,optgroup,select,textarea{margin:0;font-family:inherit;font-size:inherit;line-height:inherit }button,select{text-transform:none }[type=button],[type=reset],[type=submit],button{-webkit-appearance:button }[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled){cursor:pointer }.container,.container-fluid,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{width:100%;padding-right:var(--bs-gutter-x,.75rem);padding-left:var(--bs-gutter-x,.75rem);margin-right:auto;margin-left:auto }@media (min-width:992px){.container,.container-lg,.container-md,.container-sm{max-width:960px }}@media (min-width:1200px){.container,.container-lg,.container-md,.container-sm,.container-xl{max-width:1140px }}.row{--bs-gutter-x:1.5rem;--bs-gutter-y:0;display:flex;flex-wrap:wrap;margin-top:calc(-1 * var(--bs-gutter-y));margin-right:calc(-.5 * var(--bs-gutter-x));margin-left:calc(-.5 * var(--bs-gutter-x)) }.row>*{flex-shrink:0;width:100%;max-width:100%;padding-right:calc(var(--bs-gutter-x) * .5);padding-left:calc(var(--bs-gutter-x) * .5);margin-top:var(--bs-gutter-y) }@media (min-width:768px){.col-md-6{flex:0 0 auto;width:50% }}@media (min-width:992px){.col-lg-4{flex:0 0 auto;width:33.33333333% }.col-lg-8{flex:0 0 auto;width:66.66666667% }}@media (min-width:992px){.col-lg-12{flex:0 0 auto;width:100% }}.btn{display:inline-block;font-weight:400;line-height:1.5;color:#212529;text-align:center;text-decoration:none;vertical-align:middle;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;user-select:none;background-color:transparent;border:1px solid transparent;padding:.375rem .75rem;font-size:1rem;border-radius:.25rem;transition:color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out }@media (prefers-reduced-motion:reduce){.btn{transition:none }}.btn-success{color:#fff;background-color:#198754;border-color:#198754 }.collapse:not(.show){display:none }.nav-link{display:block;padding:.5rem 1rem;color:#0d6efd;text-decoration:none;transition:color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out }@media (prefers-reduced-motion:reduce){.nav-link{transition:none }}.navbar{position:relative;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding-top:.5rem;padding-bottom:.5rem }.navbar>.container,.navbar>.container-fluid,.navbar>.container-lg,.navbar>.container-md,.navbar>.container-sm,.navbar>.container-xl,.navbar>.container-xxl{display:flex;flex-wrap:inherit;align-items:center;justify-content:space-between }.navbar-brand{padding-top:.3125rem;padding-bottom:.3125rem;margin-right:1rem;font-size:1.25rem;text-decoration:none;white-space:nowrap }.navbar-nav{display:flex;flex-direction:column;padding-left:0;margin-bottom:0;list-style:none }.navbar-collapse{flex-basis:100%;flex-grow:1;align-items:center }.navbar-toggler{padding:.25rem .75rem;font-size:1.25rem;line-height:1;background-color:transparent;border:1px solid transparent;border-radius:.25rem;transition:box-shadow .15s ease-in-out }.navbar-toggler-icon{display:inline-block;width:1.5em;height:1.5em;vertical-align:middle;background-repeat:no-repeat;background-position:center;background-size:100% }@media (min-width:992px){.navbar-expand-lg{flex-wrap:nowrap;justify-content:flex-start }.navbar-expand-lg .navbar-nav{flex-direction:row }.navbar-expand-lg .navbar-nav .nav-link{padding-right:.5rem;padding-left:.5rem }.navbar-expand-lg .navbar-collapse{display:flex!important;flex-basis:auto }.navbar-expand-lg .navbar-toggler{display:none }}.navbar-dark .navbar-brand{color:#fff }.navbar-dark .navbar-toggler{color:rgba(255,255,255,.55);border-color:rgba(255,255,255,.1) }.navbar-dark .navbar-toggler-icon{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") }.card{position:relative;display:flex;flex-direction:column;min-width:0;word-wrap:break-word;background-color:#fff;background-clip:border-box;border:1px solid rgba(0,0,0,.125);border-radius:.25rem }.card-body{flex:1 1 auto;padding:1rem 1rem }.card-title{margin-bottom:.5rem }.card-text:last-child{margin-bottom:0 }.card-img,.card-img-top{border-top-left-radius:calc(.25rem - 1px);border-top-right-radius:calc(.25rem - 1px) }.fixed-top{position:fixed;top:0;right:0;left:0;z-index:1030 }.mt-3{margin-top:1rem!important }.mt-4{margin-top:1.5rem!important }.ms-auto{margin-left:auto!important }.pt-4{padding-top:1.5rem!important }.text-center{text-align:center!important }#about, #skills, #portfolio, #contact {margin-top: 4rem;padding-top: 4rem;}#about h2, #skills h2, #portfolio h2, #contact h2 {margin-bottom: 3rem;}#contact {padding-bottom: 4rem;}.navbarScroll.navbarDark {background-color: #5b5b5b;}.nav-link{color: #ffffff !important;}.bgimage {height: 100vh;max-height: 900px;background: url("images/bg.webp");background-size: cover;position: relative;}.hero_title {font-size: 4.5rem;}.hero_desc {font-size: 2rem;}@media (max-width: 640px) {.hero_title {font-size: 3rem;}.hero_desc {font-size: 1.5rem;}}.contrast {background-color: rgba(0, 0, 0, 0.2);}.hero-text {text-align: center;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);color: white;}.imageAboutPage {width: 100%;}.imageAboutPage {border-radius: 50%;box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);}.skillsText.card {height: 350px;cursor: pointer;}.skillsText img {width: 100%;height: 150px;object-fit: contain;}#skills p {text-align: center;}.skillsIcon {font-size: 36px;text-align: center;width: 100%;}.card-title {text-align: center;}.card:hover .skillsIcon {color: #008000;}.skillsText:hover {border: 1px solid #008000;}#portfolio p {text-align: center;}.contactColumn {display: flex;flex-direction: column;align-items: center;}.contactColumn i {color: #198754;}a {text-decoration: none;color: inherit;}
