--- a/style.css
+++ b/style.css
@@ -316,6 +316,11 @@ button,select{
     background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
 
+.link-pa{
+    margin-top: auto;
+    padding: 10px;
+}
+
 .card{
     position:relative;
     display:flex;
@@ -328,8 +333,10 @@ button,select{
     border-radius:.25rem
 }
 .card-body{
-    flex:1 1 auto;
-    padding:1rem 1rem
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 234px
 }
 .card-title{
     margin-bottom:.5rem
