--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     --bs-body-color:#212529;
     --bs-body-bg:#fff
 }
-
 .h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6{
     margin-top:0;
     margin-bottom:.5rem;
@@ -23,7 +22,6 @@
         font-size:2.5rem
     }
 }
-
 .h2,h2{
     font-size:calc(1.325rem + .9vw)
 }
@@ -32,7 +30,6 @@
         font-size:2rem
     }
 }
-
 .h3,h3{
     font-size:calc(1.3rem + .6vw)
 }
@@ -41,7 +38,6 @@
         font-size:1.75rem
     }
 }
-
 *,::after,::before{
     box-sizing:border-box
 }
@@ -49,13 +45,11 @@ p{
     margin-top:0;
     margin-bottom:1rem
 }
-
 @media (prefers-reduced-motion:no-preference){
     :root{
         scroll-behavior:smooth
     }
 }
-
 body{
     margin:0;
     font-family:var(--bs-body-font-family);
@@ -68,24 +62,19 @@ body{
     -webkit-text-size-adjust:100%;
     -webkit-tap-highlight-color:transparent
 }
-
 ol,ul{
     padding-left:2rem
 }
-
 dl,ol,ul{
     margin-top:0;
     margin-bottom:1rem
 }
-
 img,svg{
     vertical-align:middle
 }
-
 button{
     border-radius:0
 }
-
 button,input,optgroup,select,textarea{
     margin:0;
     font-family:inherit;
@@ -95,15 +84,12 @@ button,input,optgroup,select,textarea{
 button,select{
     text-transform:none
 }
-
 [type=button],[type=reset],[type=submit],button{
     -webkit-appearance:button
 }
-
 [type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled){
     cursor:pointer
 }
-
 .container,.container-fluid,.container-lg,.container-md,.container-sm,.container-xl,.container-xxl{
     width:100%;
     padding-right:var(--bs-gutter-x,.75rem);
@@ -111,13 +97,11 @@ button,select{
     margin-right:auto;
     margin-left:auto
 }
-
 @media (min-width:992px){
     .container,.container-lg,.container-md,.container-sm{
         max-width:960px
     }
 }
-
 @media (min-width:1200px){
     .container,.container-lg,.container-md,.container-sm,.container-xl{
         max-width:1140px
@@ -140,21 +124,17 @@ button,select{
     padding-left:calc(var(--bs-gutter-x) * .5);
     margin-top:var(--bs-gutter-y)
 }
-
 @media (min-width:768px){
     .col-md-6{
         flex:0 0 auto;
         width:50%
     }
 }
-
 @media (min-width:992px){
-
     .col-lg-4{
         flex:0 0 auto;
         width:33.33333333%
     }
-
     .col-lg-8{
         flex:0 0 auto;
         width:66.66666667%
@@ -167,7 +147,6 @@ button,select{
         width:100%
     }
 }
-
 .btn{
     display:inline-block;
     font-weight:400;
@@ -192,18 +171,14 @@ button,select{
         transition:none
     }
 }
-
 .btn-success{
     color:#fff;
     background-color:#198754;
     border-color:#198754
 }
-
-
 .collapse:not(.show){
     display:none
 }
-
 .nav-link{
     display:block;
     padding:.5rem 1rem;
@@ -224,6 +199,7 @@ button,select{
     align-items:center;
     justify-content:space-between;
     padding-top:.5rem;
+    background-color: rgba(0, 0, 0, 0.2);
     padding-bottom:.5rem
 }
 
@@ -233,7 +209,6 @@ button,select{
     align-items:center;
     justify-content:space-between
 }
-
 .navbar-brand{
     padding-top:.3125rem;
     padding-bottom:.3125rem;
@@ -242,7 +217,6 @@ button,select{
     text-decoration:none;
     white-space:nowrap
 }
-
 .navbar-nav{
     display:flex;
     flex-direction:column;
@@ -250,13 +224,11 @@ button,select{
     margin-bottom:0;
     list-style:none
 }
-
 .navbar-collapse{
     flex-basis:100%;
     flex-grow:1;
     align-items:center
 }
-
 .navbar-toggler{
     padding:.25rem .75rem;
     font-size:1.25rem;
@@ -266,7 +238,6 @@ button,select{
     border-radius:.25rem;
     transition:box-shadow .15s ease-in-out
 }
-
 .navbar-toggler-icon{
     display:inline-block;
     width:1.5em;
@@ -276,51 +247,40 @@ button,select{
     background-position:center;
     background-size:100%
 }
-
 @media (min-width:992px){
     .navbar-expand-lg{
         flex-wrap:nowrap;
         justify-content:flex-start
     }
-
     .navbar-expand-lg .navbar-nav{
         flex-direction:row
     }
-
     .navbar-expand-lg .navbar-nav .nav-link{
         padding-right:.5rem;
         padding-left:.5rem
     }
-
     .navbar-expand-lg .navbar-collapse{
         display:flex!important;
         flex-basis:auto
     }
-
     .navbar-expand-lg .navbar-toggler{
         display:none
     }
 }
-
-
 .navbar-dark .navbar-brand{
     color:#fff
 }
-
 .navbar-dark .navbar-toggler{
     color:rgba(255,255,255,.55);
     border-color:rgba(255,255,255,.1)
 }
-
 .navbar-dark .navbar-toggler-icon{
     background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
-
 .link-pa{
     margin-top: auto;
     padding: 10px;
 }
-
 .card{
     position:relative;
     display:flex;
@@ -346,7 +306,9 @@ button,select{
 }
 .card-img,.card-img-top{
     border-top-left-radius:calc(.25rem - 1px);
-    border-top-right-radius:calc(.25rem - 1px)
+    border-top-right-radius:calc(.25rem - 1px);
+    width:100%;
+    height: 117px
 }
 .fixed-top{
     position:fixed;
@@ -399,7 +361,6 @@ button,select{
     color: #ffffff !important;
 }
 
-
 /* hero background image */
 .bgimage {
     height: 100vh;
@@ -411,27 +372,22 @@ button,select{
 /* text css above hero image*/
 .hero_title {
     font-size: 4.5rem;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 .hero_desc {
     font-size: 2rem;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 640px) {
-
-    /* text css above hero image*/
-.hero_title {
-    font-size: 3rem;
-}
-.hero_desc {
-    font-size: 1.5rem;
-}
-
+    .hero_title {
+        font-size: 3rem;
+    }
+    .hero_desc {
+        font-size: 1.5rem;
+    }
 }
 
-.contrast {
-    background-color: rgba(0, 0, 0, 0.2);
-
-}
 .hero-text {
     text-align: center;
     position: absolute;
@@ -492,9 +448,7 @@ button,select{
 .contactColumn i {
     color: #198754;
 }
-
 /* footer */
-
 a {
     text-decoration: none;   
     color: inherit;              
